# Loom

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PHILOSOPHY.md  README.md  ROADMAP.md
.claude/: launch.json
.github/workflows/: ci.yml
docs/: PRD.md
docs/harness/: README.md  conventions.md  evaluator.md  generator.md  planner.md  session-protocol.md
docs/schemas/: api-registration.md
docs/vmlx/: paged-cache.md  prefix-cache.md
docs/vmlx/benchmarks/: vs-mlx-lm.json  vs-mlx-lm.md
infra/: README.md  nginx.conf
loom/gateway/: pyproject.toml
loom/gateway/src/loom/gateway/: admin.py  config.py  connectors.py  logging_setup.py  main.py
loom/gateway/tests/: test_gateway_unit.py
loom/web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
loom/web/src/: App.tsx  index.css  types.ts
loom/web/src/admin/pages/: AIConfig.tsx  Models.tsx  Security.tsx  Users.tsx
loom/web/src/components/: Composer.tsx  ConnectionDot.tsx  ConnectorPicker.tsx  Header.tsx  Message.tsx  MessageList.tsx  ModelPicker.tsx  SettingsModal.tsx  Sidebar.tsx  Toasts.tsx
loom/web/src/lib/: api.ts  id.ts  markdown.tsx  shortcuts.ts  skills.ts  sse.ts  storage.ts
loom/web/src/pages/: CustomizeConnectors.tsx  CustomizeSkills.tsx
loom/web/src/state/: connection.ts  conversations.ts  settings.ts  theme.ts  toasts.ts
loom/web/src/test/: conversations.test.ts  sse.test.ts  storage.test.ts
notes/: progress.md
scripts/: session-end.sh  session-start.sh  session-verify.sh
tasks/: README.md  tasks.json
vmlx/: README.md  pyproject.toml
vmlx/benchmarks/: history.jsonl
vmlx/src/vmlx/: __init__.py  __main__.py  cli.py
vmlx/src/vmlx/api/: __init__.py  openai_types.py  server.py
vmlx/src/vmlx/benchmarks/: __init__.py  compare_mlx_lm.py  paged_cache.py  registry.py  report.py  run.py  runner.py
vmlx/src/vmlx/cache/: __init__.py  paged.py  prefix.py
vmlx/src/vmlx/engine/: __init__.py  batching.py  single.py
vmlx/tests/: test_api_metal.py  test_api_unit.py  test_benchmarks_metal.py  test_benchmarks_unit.py  test_cache_metal.py  test_cache_unit.py  test_compare_mlx_lm_metal.py  test_compare_mlx_lm_unit.py  test_engine_batching_metal.py  test_engine_batching_unit.py  test_engine_metal.py  test_engine_unit.py  test_prefix_metal.py  test_prefix_unit.py  test_smoke.py
