[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "vmlx"
version = "0.0.1"
description = "High-throughput MLX serving engine for Apple Silicon"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Loom contributors" }]
keywords = ["mlx", "llm", "inference", "serving", "apple-silicon"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mlx>=0.18",
    "mlx-lm>=0.19",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.26",
    "openai>=1.30",
]

[project.scripts]
vmlx = "vmlx.cli:main"

[project.urls]
Homepage = "https://github.com/ASKKPOP/Loom"
Repository = "https://github.com/ASKKPOP/Loom"

[tool.setuptools.packages.find]
where = ["src"]
include = ["vmlx*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["mlx.*", "mlx_lm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "metal: tests that require Apple Silicon Metal GPU (skip in CI fallback)",
]
